@startuml

skinparam defaultFontName "Courier New"
skinparam defaultFontSize 18

class Book {
  - String id
  - String title
  - List<String> authors
  - int year
  - BigDecimal price
}

class InventoryItem {
  - String bookId
  - int amount
}

class Order {
  - String orderId
  - Status status
  - List<OrderItem> items
  - long timestamp
}

enum Status {
  IN_PROGRESS
  SUCCESS
  FAIL
}

class OrderItem {
  - Book book
  - int quantity
}

Order *-- Status
Order *-- OrderItem

@enduml
